force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/Product_Mapping_for_MSP_Overage__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata stores the mapping of consumption, Addon products with their respective overages. Also, stores the respective product and pricebook entry Ids to be used in batch.</description>
    <label>Product Mapping for MSP Overage</label>
    <pluralLabel>Product Mapping for MSP Overage</pluralLabel>
</CustomObject>