force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/fields/Actual_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Product_Price__c</fullName>
    <label>Actual Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>