force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/fields/Actual_Product_Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Actual_Product_Pricebook_Id__c</fullName>
    <label>Actual Product Pricebook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>