force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/fields/Consumption_AddOn_Product__c.field-meta.xml
<CustomField>
    <fullName>Consumption_AddOn_Product__c</fullName>
    <label>Consumption/AddOn Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>