force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/fields/Overage_Product__c.field-meta.xml
<CustomField>
    <fullName>Overage_Product__c</fullName>
    <label>Overage Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>