force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/fields/Overage_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Overage_Product_Id__c</fullName>
    <label>Overage Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>