force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/fields/Overage_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Overage_Product_Price__c</fullName>
    <label>Overage Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>