force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/fields/Product_to_map__c.field-meta.xml
<CustomField>
    <fullName>Product_to_map__c</fullName>
    <label>Product to map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>