force-app/main/default/objects/Product_Mapping_for_MSP_Overage__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Overage_Product__c</columns>
    <columns>Overage_Product_Id__c</columns>
    <columns>Overage_Product_Price__c</columns>
    <columns>Overage_Product_Pricebook_Id__c</columns>
    <columns>Actual_Product__c</columns>
    <columns>Actual_Product_Id__c</columns>
    <columns>Actual_Product_Price__c</columns>
    <columns>Actual_Product_Pricebook_Id__c</columns>
    <columns>Consumption_AddOn_Product__c</columns>
    <columns>Product_to_map__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>